+Rtdata fetch devices

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,4 +1,40 @@
-.container{
-    margin-top: 2%;
-    padding-bottom: 7rem;
+.container {
+  margin-top: 2%;
+  padding-bottom: 7rem;
+}
+
+.panel {
+  box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
+}
+.darkBgColor {
+  background-color: #636463;
+}
+
+.lightBgColor {
+  background-color: #efefef;
+}
+
+.hundredHeight {
+  height: 100vh;
+}
+
+.status {
+  text-align: center;
+  padding: 10px;
+}
+
+.titleStatus {
+  background: #ffffff;
+  box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
+  border-radius: 31px;
+  font-family: Roboto-Bold;
+  font-size: 14px;
+  color: #636463;
+  letter-spacing: 0;
+}
+
+.normalStatus {
+  background: #006486;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 0 31px 31px 31px;
 }
