+fixes components layout

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -6,6 +6,11 @@
 .panel {
   box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
 }
+
+.hundredHeight {
+  height: 100vh;
+}
+
 .sigmaDarkBg {
   background-color: #636463;
 }
