--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -7,6 +7,10 @@
   box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
 }
 
+.halfWidth {
+  width: 100vw;
+}
+
 .hundredHeight {
   height: 100vh;
 }
