--- a/frontend/src/styles/common/Footer.css
+++ b/frontend/src/styles/common/Footer.css
@@ -1,9 +1,14 @@
 .custom-footer {
   background-color: #636463;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0%;
   width: 100%;
-  height: 7rem;
+  /* height: 7rem; */
+  color: white;
+}
+
+.custom-footer a {
+  color: white;
 }
 
 .justify-footer {
