--- a/frontend/src/styles/common/Footer.css
+++ b/frontend/src/styles/common/Footer.css
@@ -1,7 +1,9 @@
 .custom-footer {
   background-color: #636463;
   /* position: fixed; */
-  bottom: 0%;
+  position: relative;
+  bottom: 0;
+  left: 0;
   width: 100%;
   /* height: 7rem; */
   color: white;
