--- a/frontend/src/styles/common/Footer.css
+++ b/frontend/src/styles/common/Footer.css
@@ -1,7 +1,7 @@
 .custom-footer {
   background-color: #636463;
   /* position: fixed; */
-  position: relative;
+  /* position: relative; */
   bottom: 0;
   left: 0;
   width: 100%;
