--- a/frontend/src/styles/common/Footer.css
+++ b/frontend/src/styles/common/Footer.css
@@ -2,11 +2,12 @@
   background-color: #636463;
   /* position: fixed; */
   /* position: relative; */
-  bottom: 0;
+  /* bottom: 0;
   left: 0;
   width: 100%;
-  /* height: 7rem; */
+  height: 7rem; */
   color: white;
+  text-align: center;
 }
 
 .custom-footer a {
