+normalize frontend system service name

--- a/ansible/playbooks/templates/database_config.j2
+++ b/ansible/playbooks/templates/database_config.j2
@@ -11,10 +11,10 @@ db.createUser({
 });
 
 db.users.insert({
-  name: 'test3@test3.cl',
-  company: 'test3',
+  email: 'test3@test3.cl',
+  name: 'test3',
   password: '123',
-  rolname: 'user',
+  rol: 'user',
 });
 
 db.users.insert({
