--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -67,6 +67,37 @@ body {
   padding-bottom: 160px;
 }
 
+.text-responsive {
+  font-size: calc(100% + 1vw + 1vh);
+}
+
+@media (min-width: 544px) {
+  h1 {
+    font-size: 1.5rem;
+  } /*1rem = 16px*/
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  } /*1rem = 16px*/
+}
+@media (min-width: 992px) {
+  h1 {
+    font-size: 2.5rem;
+  } /*1rem = 16px*/
+}
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 3rem;
+  } /*1rem = 16px*/
+}
+@media (min-width: 950px) and (max-width: 1100px) {
+  h1 {
+    font-size: 2.75rem;
+    color: red;
+  }
+}
+
 @media only screen and (min-width: 480px) {
   #mapMenuItem {
     display: none;
