--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -94,7 +94,7 @@ body {
 @media (min-width: 950px) and (max-width: 1100px) {
   h1 {
     font-size: 2.75rem;
-    color: red;
+    /* color: red; */
   }
 }
 
