--- a/frontend/src/styles/common/Footer.css
+++ b/frontend/src/styles/common/Footer.css
@@ -4,8 +4,8 @@
   /* position: relative; */
   /* bottom: 0;
   left: 0;
-  width: 100%;
-  height: 7rem; */
+  width: 100%;*/
+  height: 7rem;
   color: white;
   text-align: center;
 }
@@ -20,4 +20,5 @@
   overflow: hidden;
   margin: 0 auto;
   color: white;
+  padding: 0;
 }
