--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,8 +1,7 @@
 html,
 body {
   padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0; 
 }
 
 * {
@@ -52,7 +51,7 @@ a {
 }
 
 .title a {
-  color: #0070f3;
+  color: rgb(16, 38, 59);
   text-decoration: none;
 }
 
@@ -87,7 +86,7 @@ code {
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Avenir, Century Gothic ;
 }
 
 .grid {
@@ -107,16 +106,17 @@ code {
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid rgb(16, 38, 59);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  background-color: rgb(16, 38, 59);
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: rgb(16, 38, 59);
+  border-color: rgb(16, 38, 59);
 }
 
 .card h3 {
@@ -129,6 +129,8 @@ code {
   font-size: 1.25rem;
   line-height: 1.5;
 }
+
+
 
 .logo {
   height: 1em;
